more parameter tuning

--- a/ML_pipeline_preparation.ipynb
+++ b/ML_pipeline_preparation.ipynb
@@ -1129,20 +1129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = Pipeline([\n",
     "    ('vect', CountVectorizer(tokenizer=tokenize)),\n",
     "    ('tfidf', TfidfTransformer()),\n",
-    "    ('clf', MultiOutputClassifier(RandomForestClassifier(random_state=100)))\n",
+    "    ('clf', MultiOutputClassifier(RandomForestClassifier()))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
        "dict_keys(['memory', 'steps', 'verbose', 'vect', 'tfidf', 'clf', 'vect__analyzer', 'vect__binary', 'vect__decode_error', 'vect__dtype', 'vect__encoding', 'vect__input', 'vect__lowercase', 'vect__max_df', 'vect__max_features', 'vect__min_df', 'vect__ngram_range', 'vect__preprocessor', 'vect__stop_words', 'vect__strip_accents', 'vect__token_pattern', 'vect__tokenizer', 'vect__vocabulary', 'tfidf__norm', 'tfidf__smooth_idf', 'tfidf__sublinear_tf', 'tfidf__use_idf', 'clf__estimator__bootstrap', 'clf__estimator__class_weight', 'clf__estimator__criterion', 'clf__estimator__max_depth', 'clf__estimator__max_features', 'clf__estimator__max_leaf_nodes', 'clf__estimator__min_impurity_decrease', 'clf__estimator__min_impurity_split', 'clf__estimator__min_samples_leaf', 'clf__estimator__min_samples_split', 'clf__estimator__min_weight_fraction_leaf', 'clf__estimator__n_estimators', 'clf__estimator__n_jobs', 'clf__estimator__oob_score', 'clf__estimator__random_state', 'clf__estimator__verbose', 'clf__estimator__warm_start', 'clf__estimator', 'clf__n_jobs'])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,22 +1162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "param_grid = {\n",
     "        'vect__ngram_range': ((1, 1), (1, 2)),\n",
-    "        'clf__estimator__min_samples_split': [2, 4],\n",
+    "        'clf__estimator__min_samples_split': [2,3],\n",
     "        'clf__estimator__max_features': ['log2', 'auto'],\n",
-    "        'clf__estimator__n_estimators': [100, 250],\n",
-    "        'clf__estimator__max_depth': [2,3]\n",
+    "        'clf__estimator__n_estimators': [100, 150],\n",
+    "        'clf__estimator__max_depth': [1,2]\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1207,8 +1207,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:  7.2min\n",
+      "[Parallel(n_jobs=-1)]: Done  96 out of  96 | elapsed: 20.5min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise-deprecating',\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('vect',\n",
+       "                                        CountVectorizer(analyzer='word',\n",
+       "                                                        binary=False,\n",
+       "                                                        decode_error='strict',\n",
+       "                                                        dtype=<class 'numpy.int64'>,\n",
+       "                                                        encoding='utf-8',\n",
+       "                                                        input='content',\n",
+       "                                                        lowercase=True,\n",
+       "                                                        max_df=1.0,\n",
+       "                                                        max_features=None,\n",
+       "                                                        min_df=1,\n",
+       "                                                        ngram_range=(1, 1),\n",
+       "                                                        preprocessor=None,\n",
+       "                                                        stop_words=None,\n",
+       "                                                        strip_accents=None,\n",
+       "                                                        tok...\n",
+       "                                                                                               warm_start=False),\n",
+       "                                                              n_jobs=None))],\n",
+       "                                verbose=False),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'clf__estimator__max_depth': [1, 2],\n",
+       "                         'clf__estimator__max_features': ['log2', 'auto'],\n",
+       "                         'clf__estimator__min_samples_split': [2, 3],\n",
+       "                         'clf__estimator__n_estimators': [100, 150],\n",
+       "                         'vect__ngram_range': ((1, 1), (1, 2))},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=2)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1217,9 +1257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'clf__estimator__max_depth': 1,\n",
+       " 'clf__estimator__max_features': 'log2',\n",
+       " 'clf__estimator__min_samples_split': 2,\n",
+       " 'clf__estimator__n_estimators': 100,\n",
+       " 'vect__ngram_range': (1, 1)}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = cv.predict(X_test)\n",
     "cv.best_params_"
@@ -1227,19 +1282,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(accuracy_score(y_test, y_pred))\n",
-    "print(print(classification_report(y_test, y_pred, target_names=y_test.columns)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "related\n",
+      "[[   0 1538    0]\n",
+      " [   0 4959    0]\n",
+      " [   0   48    0]]\n",
+      "request\n",
+      "[[5415    0]\n",
+      " [1130    0]]\n",
+      "offer\n",
+      "[[6513    0]\n",
+      " [  32    0]]\n",
+      "aid_related\n",
+      "[[3811    0]\n",
+      " [2734    0]]\n",
+      "medical_help\n",
+      "[[6010    0]\n",
+      " [ 535    0]]\n",
+      "medical_products\n",
+      "[[6227    0]\n",
+      " [ 318    0]]\n",
+      "search_and_rescue\n",
+      "[[6365    0]\n",
+      " [ 180    0]]\n",
+      "security\n",
+      "[[6428    0]\n",
+      " [ 117    0]]\n",
+      "military\n",
+      "[[6340    0]\n",
+      " [ 205    0]]\n",
+      "child_alone\n",
+      "[[6545]]\n",
+      "water\n",
+      "[[6115    0]\n",
+      " [ 430    0]]\n",
+      "food\n",
+      "[[5830    0]\n",
+      " [ 715    0]]\n",
+      "shelter\n",
+      "[[5947    0]\n",
+      " [ 598    0]]\n",
+      "clothing\n",
+      "[[6458    0]\n",
+      " [  87    0]]\n",
+      "money\n",
+      "[[6404    0]\n",
+      " [ 141    0]]\n",
+      "missing_people\n",
+      "[[6480    0]\n",
+      " [  65    0]]\n",
+      "refugees\n",
+      "[[6299    0]\n",
+      " [ 246    0]]\n",
+      "death\n",
+      "[[6231    0]\n",
+      " [ 314    0]]\n",
+      "other_aid\n",
+      "[[5687    0]\n",
+      " [ 858    0]]\n",
+      "infrastructure_related\n",
+      "[[6080    0]\n",
+      " [ 465    0]]\n",
+      "transport\n",
+      "[[6260    0]\n",
+      " [ 285    0]]\n",
+      "buildings\n",
+      "[[6190    0]\n",
+      " [ 355    0]]\n",
+      "electricity\n",
+      "[[6420    0]\n",
+      " [ 125    0]]\n",
+      "tools\n",
+      "[[6510    0]\n",
+      " [  35    0]]\n",
+      "hospitals\n",
+      "[[6468    0]\n",
+      " [  77    0]]\n",
+      "shops\n",
+      "[[6499    0]\n",
+      " [  46    0]]\n",
+      "aid_centers\n",
+      "[[6461    0]\n",
+      " [  84    0]]\n",
+      "other_infrastructure\n",
+      "[[6239    0]\n",
+      " [ 306    0]]\n",
+      "weather_related\n",
+      "[[4775    0]\n",
+      " [1770    0]]\n",
+      "floods\n",
+      "[[6050    0]\n",
+      " [ 495    0]]\n",
+      "storm\n",
+      "[[5940    0]\n",
+      " [ 605    0]]\n",
+      "fire\n",
+      "[[6477    0]\n",
+      " [  68    0]]\n",
+      "earthquake\n",
+      "[[5956    0]\n",
+      " [ 589    0]]\n",
+      "cold\n",
+      "[[6412    0]\n",
+      " [ 133    0]]\n",
+      "other_weather\n",
+      "[[6225    0]\n",
+      " [ 320    0]]\n",
+      "direct_report\n",
+      "[[5285    0]\n",
+      " [1260    0]]\n"
+     ]
+    }
+   ],
    "source": [
     "for i, label in enumerate(y_test.columns):\n",
     "    print(label)\n",
@@ -1250,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,28 +1435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score: 0.926538494185553\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate_model(cv, X_test, y_test, category_names)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
